--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
        </table>
    </div>
    <footer style="position:fixed;margin-top:150px;bottom:0;width:100%;background:rgb(66, 66, 66);color: white;left: 0;text-align: center;"><p style="margin-top:1%;text-align: center;">Made By - Viren, Mufaddal, Zeel, Puja</p></footer>
-   <script src="BMS.js"></script>
+   <script src="bms.js"></script>
 </body>
 
 </html>
