--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
            <tbody id="book-list"></tbody>
        </table>
    </div>
-   <footer style="position:fixed;margin-top:150px;bottom:0;width:100%;background:rgb(66, 66, 66);color: white;left: 0;text-align: center;"><p style="margin-top:1%;text-align: center;">Made By - Viren, Mufaddal, Zeel, Puja</p></footer>
+   <footer style="position:fixed;margin-top:150px;bottom:0;width:100%;background:rgb(66, 66, 66);color: white;left: 0;text-align: center;"><p style="margin-top:1%;text-align: center;margin-bottom: 0%;">Made By - Viren, Mufaddal, Zeel, Puja</p>
+    <p style="margin-bottom:1%;text-align: center;margin-top:0%;">Project Guide - Prof. Sandhya Kadam</p></footer>
    <script src="bms.js"></script>
 </body>
 
